# BUT-Info

./: .gitignore
1-année/S1/TD/Base Com/: Faire un diaporama.odt
1-année/S1/TD/PPP/: Exercice 07-10.odt  Exercice 19-09odt.odt  Exercice 5.odt  (+1 more)
2-année/S3/Algèbre/: cannevas.py
2-année/S3/Dev efficace/: algo-tp3-p1-solus.tgz
2-année/S3/Probabilité/: Chap 3 Lois de probabilité discrètes.odt  Chap 4 Lois de probabilité continue.odt
2-année/S3/Prog System/: CMakeLists.txt
2-année/S3/TP/Prog System/: CMakeLists.txt  Doc_Code_Source.odt
2-année/S3/TP/Prog System/TP1/Ex2/: Boucle.c
2-année/S3/TP/Prog System/TP1/Ex3/: Argument
2-année/S3/TP/Prog System/TP1/Ex4/: Chaine
2-année/S3/TP/Prog System/TP2/ex1/: test2.txt
2-année/S3/TP/Prog System/TP4/: TP4.c
2-année/S3/TP/Prog System/TP5/: TP5  TP5.c
2-année/S4/Anglais/: Exercises about tenses past present and future oral exam S4 2024.odt  Oral exam Semester 4.odt
2-année/S4/C++/: Cours.md
2-année/S4/Com Interne/: .~lock.Note professionnelles d’information de service technique.odt#  Note professionnelles d’information de service technique.odt
2-année/S4/Méthode d'opti/: Chap 2.odt  Exercice PL2.odt  Exercice PL4.odt
2-année/S4/Nosql/: data_cleaning_functional_dependencies_demo.ipynb  examen_df_normalisation.ipynb
3-année/S5/Anglais/: Ex 1.odt
3-année/S5/Com/: Da-Silveira_Lucas_S5_Entretien.odt  Note de synthèse.odt  Veille informationnelle.odt
3-année/S5/Economie/: S5 Économie durable et numériquedécembre 2023_entraînement.docx
3-année/S5/PPP/: Les métiers de l’informatique.odt
(+1348 files in other folders)
